mlflow/kubernetes/mlflow_server.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mlflow

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-server-deployment
  namespace: mlflow
  labels:
    app: mlflow-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow-server
  template:
    metadata:
      labels:
        app: mlflow-server
    spec:
      containers:
      - name: mlflow-server
        image: localhost:5000/mlflow_server
        ports:
        - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: mlflow-server-ext
  namespace: mlflow
spec:
  selector:
    app: mlflow-server
  type: NodePort
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30100

---

apiVersion: v1
kind: Service
metadata:
  name: mlflow-server-int
  namespace: mlflow
spec:
  selector:
    app: mlflow-server
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
