mlflow/kubernetes/mlflow_server_database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-server-database-deployment
  namespace: mlflow
  labels:
    app: mlflow-server-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow-server-database
  template:
    metadata:
      labels:
        app: mlflow-server-database
    spec:
      containers:
        - name: postgres
          image: postgres:10.4
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: mlflow-server-database-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: mlflow-server-database
  namespace: mlflow
  labels:
    app: mlflow-server-database
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
   app: mlflow-server-database
