mlflow/kubernetes/mlflow_server_ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mlflow-server-ing
  namespace: mlflow
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: mlflow.jhub.be
    http:
      paths:
      - path: /
        backend:
          serviceName: mlflow-server
          servicePort: 80
